# projecteweb_23

./: README.md  pyproject.toml  web1.py
eazytapes/eazytapes/: settings.py
eazytapes/web/: admin.py  models.py  views.py
eazytapes/web/templates/web/: bar.html  index.html  tapa.html
