[tool.poetry]
name = "projecteweb_23"
version = "0.1.0"
description = ""
authors = ["ZcR-01 <zihan1048@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
urllib3 = "no"
no3 = "n"
yes = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
